prevent scroll bar during resize of dashboard

--- a/js/index.html
+++ b/js/index.html
@@ -24,7 +24,7 @@
   </script>
 </head>
 
-<body >
+<body style="overflow-x: hidden">
   <div style="display: flex;flex-direction: row;">
     <div style="width: 250px;padding: 5px">
       <div name= "tabs" style="display: flex;flex-direction: row;margin-bottom: 5px">
